Created a new scss colour variable and added it to the dark navigation component and onetime.js page.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -462,7 +462,7 @@
 
 // <========== DARK MAIN CONTENT ==========>
 .mainDark {
-	background-color: $backgroundColor_black;
+	background-color: $backgroundColor_PureBlack;
 }
 
 // <========== FOOTER ==========>
