--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -10,6 +10,7 @@ $baseColor_lightBlack: #292929;
 // Background Colours
 $backgroundColor_White: #fff;
 $backgroundColor_black: #111;
+$backgroundColor_PureBlack: #000;
 $backgroundColor_lightBlack: #292929;
 
 // Main Colours
