--- a/styles/components/_NavbarDark.scss
+++ b/styles/components/_NavbarDark.scss
@@ -1,7 +1,7 @@
 //  <========== HEADER ==========>
 .headerDark {
 	padding: 0.5rem 0;
-	background-color: $backgroundColor_black;
+	background-color: $backgroundColor_PureBlack;
 
 	nav {
 		padding: 0 1rem;
