Created a Dark footer component and edited the scss styling of the component and implimented the component into the onetime.js page.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -6,6 +6,7 @@
 @import "./pages/_storePage";
 @import "./pages/_OneTime";
 @import "./components/_NavbarDark";
+@import "./components/_FooterDark";
 @import "./boxShadow";
 
 .container {
