--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -63,9 +63,10 @@
 					font-size: $fontSize_large;
 					font-family: $fontStyle_header;
 				}
+
 				a:hover,
 				h2:hover {
-					color: $secondary_Purple;
+					color: $secondary_blue;
 				}
 			}
 
@@ -97,8 +98,8 @@
 					margin: 0 auto;
 					text-decoration: none;
 					color: $baseColor_black;
-					font-size: $fontSize_large;
-					font-family: $fontStyle_header;
+					font-size: $fontSize_small;
+					font-family: $fontStyle_option1;
 				}
 
 				a:hover {
@@ -107,10 +108,6 @@
 
 				.OneTime {
 					color: $secondary_blue;
-				}
-
-				.OneTime:hover {
-					color: $secondary_pinkRed;
 				}
 			}
 
