--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -135,7 +135,7 @@
 // <========== MAIN CONTENT ==========>
 .main {
 	margin: 0 auto;
-	min-height: 100vh;
+	// min-height: 100vh;
 	max-width: 1800px;
 
 	// <========== HERO ==========>
