--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,19 +1,12 @@
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Sarabun:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@1&display=swap");
 
 // Font Stack Properties
-$fontStyle_header: "Bebas Neue", cursive;
+$fontStyle_header: "Old Standard TT", sans-serif;
 $fontStyle_body: "Rubik", sans-serif;
-$fontStyle_option1: "Inter", sans-serif;
-$fontStyle_option2: "Sarabun", sans-serif;
+$fontStyle_option1: "Old Standard TT", sans-serif;
+$fontStyle_option2: "Old Standard TT", sans-serif;
 
 // Font Sizes
 $fontSize_xSmall: 0.75rem;
