--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,12 +1,12 @@
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
 // Font Stack Properties
-$fontStyle_header: "Old Standard TT", sans-serif;
+$fontStyle_header: "Open Sans", sans-serif;
 $fontStyle_body: "Rubik", sans-serif;
-$fontStyle_option1: "Old Standard TT", sans-serif;
-$fontStyle_option2: "Old Standard TT", sans-serif;
+$fontStyle_option1: "Open Sans", sans-serif;
+$fontStyle_option2: "Open Sans", sans-serif;
 
 // Font Sizes
 $fontSize_xSmall: 0.75rem;
