Edited all front styles.

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -3,10 +3,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
 // Font Stack Properties
-$fontStyle_header: "Open Sans", sans-serif;
+$fontStyle_header: "Rubik", sans-serif;
 $fontStyle_body: "Rubik", sans-serif;
-$fontStyle_option1: "Open Sans", sans-serif;
-$fontStyle_option2: "Open Sans", sans-serif;
+$fontStyle_option1: "Rubik", sans-serif;
+$fontStyle_option2: "Rubik", sans-serif;
 
 // Font Sizes
 $fontSize_xSmall: 0.75rem;
